non-compatible/tests/ecc-aws-131-instance_with_unencrypted_service_is_exposed_to_public_internet/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "131_c7n_group1_red",
                "IpPermissions": [
                    {
                        "FromPort": 9300,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 9300,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 9200,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 9200,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-0228a1c0d7441dba2",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "131_c7n_group1_red"
                    }
                ],
                "VpcId": "vpc-0960b46d1f1877bb1"
            },
            {
                "Description": "Managed by Terraform",
                "GroupName": "131_c7n_group2_red",
                "IpPermissions": [
                    {
                        "FromPort": 11211,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 11211,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-0645124eedf821105",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "131_c7n_group2_red"
                    }
                ],
                "VpcId": "vpc-0960b46d1f1877bb1"
            }
        ],
        "ResponseMetadata": {}
    }
}
